--- a/start-page-interface/src/App.css
+++ b/start-page-interface/src/App.css
@@ -8,6 +8,16 @@ body {
 	justify-content: center;
 }
 
+*,
+*:before,
+*:after {
+	box-sizing: border-box;
+}
+
+body * {
+	font-size: medium;
+}
+
 .App {
 	text-align: center;
 }
