temp fix by disabling helmet

--- a/stretches-site/src/styles/utility/_chipbox.scss
+++ b/stretches-site/src/styles/utility/_chipbox.scss
@@ -1,58 +1,58 @@
-//radio buttons with the "chip" class
-.chip-group {
-	display: flex;
-	flex-wrap: wrap;
-	gap: 1rem;
-	margin: 1rem 0;
+// //radio buttons with the "chip" class
+// .chip-group {
+// 	display: flex;
+// 	flex-wrap: wrap;
+// 	gap: 1rem;
+// 	margin: 1rem 0;
 
-	input[type="radio"],
-	input[type="checkbox"] {
-		display: none;
-		position: absolute;
-		overflow: hidden;
-		clip: rect(0 0 0 0);
-		height: 1px;
-		width: 1px;
-		margin: -1px;
-		padding: 0;
-		border: 0;
+// 	input[type="radio"],
+// 	input[type="checkbox"] {
+// 		display: none;
+// 		position: absolute;
+// 		overflow: hidden;
+// 		clip: rect(0 0 0 0);
+// 		height: 1px;
+// 		width: 1px;
+// 		margin: -1px;
+// 		padding: 0;
+// 		border: 0;
 
-		&+label {
-			background-color: transparent;
-			border: 1px solid cornflowerblue;
-			color: cornflowerblue;
-			padding: 0.5em 1em;
-			text-align: center;
-			border-radius: 9999px;
-			z-index: 10;
-			display: inline-block;
-			vertical-align: middle;
-			display: flex;
-			align-items: center;
-			gap: 0.45rem;
+// 		&+label {
+// 			background-color: transparent;
+// 			border: 1px solid white;
+// 			// color: cornflowerblue;
+// 			padding: 0.5em 1em;
+// 			text-align: center;
+// 			border-radius: 9999px;
+// 			z-index: 10;
+// 			display: inline-block;
+// 			vertical-align: middle;
+// 			display: flex;
+// 			align-items: center;
+// 			gap: 0.45rem;
 
-			&:hover {
-				cursor: pointer;
-			}
-
-
-		}
-
-		&:checked {
-			&+label {
-				background-color: cornflowerblue;
-				color: white;
-				font-weight: bold;
-				// color: var(--clr-primary-pink)
-			}
-		}
-	}
-
-	.chip.chip-radio {
-		position: relative;
-	}
+// 			&:hover {
+// 				cursor: pointer;
+// 			}
 
 
+// 		}
+
+// 		&:checked {
+// 			&+label {
+// 				background-color: hsla(0, 0%, 100%, 0.53);
+// 				color: hsl(343.4, 79.9%, 29.2%);
+// 				font-weight: bold;
+// 				// color: var(--clr-primary-pink)
+// 			}
+// 		}
+// 	}
+
+// 	.chip.chip-radio {
+// 		position: relative;
+// 	}
 
 
-}
+
+
+// }
