add modal and clean up styles

--- a/stretches-site/src/styles/App.css
+++ b/stretches-site/src/styles/App.css
@@ -270,6 +270,9 @@ button.timer__btn {
   mix-blend-mode: screen;
 }
 button.modal__btn {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
   width: 50%;
   height: 3rem;
   font-size: var(--text-sm);
